--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="images/logo.png" type="image/png">
 <img src="images/logo.png" title="Sardar V DO Society" width="150" height="150">
 <img src="images/abhii.png" class="image" title="General Secretary of the Society" width="200" height="200" align="right">
-<h6 class="namedesig" align="right" ><b>Abhilash Murahari</b>&nbsp; &nbsp;<br><u>&nbsp; General Secretary & Board Member</u></h6>
+<h6 class="namedesig" align="right" ><b>Abhilash Murahari</b>&nbsp; &nbsp;<br><u>&nbsp; General Secretary</u></h6>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="images/logo.png" type="image/png"> 
 <style>
