--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ mark
     <div>
         <br><br><br>
 <!-- <center><p><h2> Please Remember</h2></p><br><br> -->
-<a href="mailto:sardarvdo@gmail.com?subject=Complaint regarding an Issue with the Sardar V DO Team &body=Hi Team <br> This is &cc=sardhaarvdo.founder@gmail.com">Complaint BOX</a>
+<a href="mailto:sardarvdo@gmail.com?subject=Complaint regarding an Issue with the Sardar V DO Team &body=Hi Team, &cc=sardhaarvdo.founder@gmail.com">Complaint BOX</a>
 </div>
 
 <script>
